--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.4.10",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "mathjs": "^11.11.2",
